--- a/app/package.json
+++ b/app/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.22",
+    "postcss": "^8.4.49"
   }
 }
